<resources>
    <string name="app_name" translatable="false">GPS Speedometer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="analog_meter" translatable="false">GPS Speedometer</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="subscription_auto_" translatable="false">Subscription Auto Renews, You Can Cancel any time. Your Subscriptions can be managed or cancelled under your google PlayStore account profile > Payments and Subscriptions > Limited usage without subscriptions></string>
    <string name="subscription_yearly_" translatable="false">You will be automatically charged at the end of free trial, subscription auto renews, cancel any time. Your subscription can be managed or cancelled under your google play store account profile > Payment and Subscriptions > subscriptions Limited usage without subscriptions</string>
    <string name="share_app_link" translatable="false">https://play.google.com/store/apps/details?id=gps.speedometer.digihud.odometer.speedometer</string>
    <string name="str_download_complete" translatable="false">Download Complete</string>
    <string name="str_restart" translatable="false">Restart</string>
    <string name="str_app_update_fail" translatable="false">Update Failed</string>
    <string name="admob_ad_id" translatable="false">ca-app-pub-4016151566711692~3601854534</string>
    <string name="history">History</string>
    <string name="clear_all">Clear All</string>
    <string name="detail">Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="let_s_start">Agree</string>
    <string name="settings">Settings</string>
    <string name="speed_in">Speed In:</string>
    <string name="select_theme">Select Theme</string>
    <string name="notification_bar">Notification bar</string>
    <string name="vibration">Vibration</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="sound_effects">Sound effects</string>
    <string name="route_tracking_on_map">Route Tracking on map</string>
    <string name="permission_settings">Permission settings</string>
    <string name="speed_warning">Max Speed Limit</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="shape_app">Share App</string>
    <string name="from">From:</string>
    <string name="destination">Destination:</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="avg_speed">Avg.Speed</string>
    <string name="max_speed">Max.Speed</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="resume">Resume</string>
    <string name="gauge">Analog</string>
    <string name="digital">Digital</string>
    <string name="my_location">Map</string>
    <string name="warning_when_over">Warning When Over</string>
    <string name="driving">Driving</string>
    <string name="cycling">Cycling</string>
    <string name="walking">Walking</string>
    <string name="done">Done</string>
    <string name="splash_description">Measure your speed and duration seamless</string>
    <string name="exit_details">Do you really want to exit from the app?</string>
    <string name="exit_app">Exit App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saving">Saving</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="select_speed_units">Select Speed Units</string>
    <string name="theme_appearance"><![CDATA[Theme & Appearance]]></string>
    <string name="traveling_history">Traveling History</string>
    <string name="max_speed_limit">Max Speed Limit</string>
    <string name="app_language">App Language</string>
    <string name="speed_units">Speed Units</string>
    <string name="themes">Themes</string>
    <string name="speed_limit">Speed Limit</string>
    <string name="tap_on_digit_to_edit">Tap on Digit To Edit</string>
    <string name="welcome_drive_smarter_nwith_speedometer">Welcome! Drive smarter\nwith Speedometer</string>
    <string name="get_real_time_accurate_speed_readings_your_speed_live_and_accurate">Get Real-Time, Accurate Speed Readings\nYour Speed, Live and Accurate</string>
    <string name="track_review_past_trips"><![CDATA[Track & Review Past Trips]]></string>
    <string name="see_where_you_ve_been_detailed_trip_review_with_map_route">See Where You’ve Been – Detailed Trip\nReview with Map Route</string>
    <string name="smart_overspeed_alerts">Smart Overspeed Alerts</string>
    <string name="set_speed_limits_amp_get_real_time_alertsdrive_safe_with_speed_warnings"><![CDATA[Set Speed Limits & Get Real-Time Alerts\nDrive Safe with Speed Warnings]]></string>
    <string name="cancel_anytime">Cancel Anytime</string>
</resources>