<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:src="@drawable/intro_3"
        android:contentDescription="@string/welcome_drive_smarter_nwith_speedometer"
        app:layout_constraintBottom_toTopOf="@id/tvAi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/gradient_black"
        app:layout_constraintBottom_toBottomOf="@id/imageView2"/>

    <TextView
        android:id="@+id/tvAi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/smart_overspeed_alerts"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintBottom_toTopOf="@id/tvNav" />

    <TextView
        android:id="@+id/tvNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/set_speed_limits_amp_get_real_time_alertsdrive_safe_with_speed_warnings"
        android:textColor="#898989"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>