<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor"
    tools:context=".activities.HistoryActivity">
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_margin="10sp"
        android:contentDescription="@string/todo"
        android:padding="7sp"
        android:src="@drawable/previous_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="@id/backBtn" />

    <TextView
        android:id="@+id/clearTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/clear_all"
        android:textColor="@color/redColor"
        android:textSize="13sp"
        android:layout_marginEnd="18sp"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backBtn" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>