<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor"
    tools:context=".settings.ThemeSelection">
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_margin="10sp"
        android:contentDescription="@string/todo"
        android:padding="7sp"
        android:src="@drawable/previous_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/themes"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="@id/backBtn" />

    <LinearLayout
        android:id="@+id/speedUnitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/setting_shape"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/backBtn">

        <TextView
            android:id="@+id/titleUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/select_theme"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnDone"
        android:layout_width="0sp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardBackgroundColor="@color/greenColor"
        app:cardCornerRadius="@dimen/_19sdp"
        app:layout_constraintEnd_toEndOf="@id/speedUnitLayout"
        app:layout_constraintStart_toStartOf="@id/speedUnitLayout"
        app:layout_constraintTop_toBottomOf="@id/speedUnitLayout"
        app:strokeColor="@color/greenColor"
        app:strokeWidth="0dp">


        <TextView
            android:id="@+id/doneTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.card.MaterialCardView>
    <include
        android:id="@+id/smallAd"
        layout="@layout/bannar_medium"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>