<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="350dp"
        android:layout_height="265sp"
        android:backgroundTint="@color/blueColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/emojiIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23sp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/main_card"
        app:layout_constraintStart_toStartOf="@+id/main_card"
        app:layout_constraintTop_toTopOf="@id/main_card"
        app:srcCompat="@drawable/exit_emoji"
        app:tint="@color/greenColor" />

    <TextView
        android:id="@+id/titletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/exit_app"
        android:textColor="@color/greenColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/main_card"
        app:layout_constraintStart_toStartOf="@+id/main_card"
        app:layout_constraintTop_toBottomOf="@id/emojiIcon" />

    <TextView
        android:id="@+id/detailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/exit_details"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/main_card"
        app:layout_constraintStart_toStartOf="@+id/main_card"
        app:layout_constraintTop_toBottomOf="@id/titletxt" />

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="40sp"
        android:layout_marginHorizontal="45sp"
        android:layout_marginTop="26sp"
        android:elevation="2sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/main_card"
        app:layout_constraintStart_toStartOf="@id/main_card"
        app:layout_constraintTop_toBottomOf="@id/detailTV">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnNo"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/greenColor"
            app:cardCornerRadius="8sp"
            app:strokeWidth="0sp">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/no"
                android:textColor="@color/blueColor"
                android:textSize="@dimen/_11sdp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnYes"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_marginStart="8sp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/blueColor"
            app:cardCornerRadius="8sp"
            app:strokeColor="@color/greenColor"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>