<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor"
    tools:context=".settings.MaxSpeed">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_margin="10sp"
        android:contentDescription="@string/todo"
        android:padding="7sp"
        android:src="@drawable/previous_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/speed_limit"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="@id/backBtn" />

    <LinearLayout
        android:id="@+id/btnDriving"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/setting_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/backBtn">

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginStart="@dimen/_17sdp"
            android:contentDescription="@string/select_speed_units"
            android:src="@drawable/car_icon" />

        <TextView
            android:id="@+id/titleDriving"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/driving"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/limitDriving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/drivingUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_17sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text=" km/h"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnCycling"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/setting_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnDriving">

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginStart="@dimen/_17sdp"
            android:contentDescription="@string/select_speed_units"
            android:src="@drawable/cycle_icon" />

        <TextView
            android:id="@+id/titleCycling"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cycling"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/limitCycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text="25"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/unitCycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_17sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text=" km/h"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnWalking"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/setting_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnCycling">

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginStart="@dimen/_17sdp"
            android:contentDescription="@string/select_speed_units"
            android:src="@drawable/walk_icon" />

        <TextView
            android:id="@+id/titleWalking"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/walking"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/limitWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text="10"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/unitWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_17sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text=" km/h"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnCustom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/setting_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnWalking">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/titleCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/warning_when_over"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-3dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/tap_on_digit_to_edit"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/units_shape"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/speedLimit"
                android:layout_width="92sp"
                android:layout_height="match_parent"
                android:fontFamily="@font/digital_font"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                android:textColor="@color/greenColor"
                android:textSize="35sp"
                android:backgroundTint="@color/blueColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="km/h"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnDone"
        android:layout_width="0sp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardBackgroundColor="@color/greenColor"
        app:cardCornerRadius="@dimen/_19sdp"
        app:layout_constraintEnd_toEndOf="@id/btnCustom"
        app:layout_constraintStart_toStartOf="@id/btnCustom"
        app:layout_constraintTop_toBottomOf="@id/btnCustom"
        app:strokeColor="@color/greenColor"
        app:strokeWidth="0dp">


        <TextView
            android:id="@+id/doneTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.card.MaterialCardView>
    <include
        android:id="@+id/smallAd"
        layout="@layout/bannar_small"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>